Migrate to vite

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <script type="module" src="/src/main.js"></script>
     <footer>
       <p>Optical character recognition system powered by <a href="https://github.com/tesseract-ocr/tesseract">Tesseract OCR</a>. This application uses <a href="https://tesseract.projectnaptha.com/">Tesseract.js</a>, Javascript port of Tesseract</p>
       <p>You can use images with English or Malayalam content. Use the editor and the spellchecker for proofreading the text recognized.</p>
