--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name=theme-color content=#00A7D0>
     <meta name="description" content="Optical Character Recognition">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <title>Optical Character Recognition</title>
   </head>
 
