--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name=theme-color content=#00A7D0>
-    <meta name="description" content="Optical Character Recognition">
+    <meta name="description" content="Malayalam Optical Character Recognition മലയാളം ഓസിആർ Converts image to text">
     <link rel="icon" href="/favicon.ico">
-    <title>Optical Character Recognition</title>
+    <title>Malayalam Optical Character Recognition</title>
   </head>
 
   <body>
@@ -19,7 +19,7 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
     <footer>
-      <p>Optical character recognition system powered by <a href="https://github.com/tesseract-ocr/tesseract">Tesseract OCR</a>. This application uses <a href="https://tesseract.projectnaptha.com/">Tesseract.js</a>, Javascript port of Tesseract</p>
+      <p>Malayalam Optical character recognition system powered by <a href="https://github.com/tesseract-ocr/tesseract">Tesseract OCR</a>. This application uses <a href="https://tesseract.projectnaptha.com/">Tesseract.js</a>, Javascript port of Tesseract</p>
       <p>You can use images with English or Malayalam content. Use the editor and the spellchecker for proofreading the text recognized.</p>
       <p><strong>Privacy</strong>: Your image does not leave your browser since the recognition is done in browser and does not use any remote servers.</p>
       <p><a href="https://gitlab.com/smc/tesseract-ocr-web">Source code</a></p>
